[package]
name = "demo_glium"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
egui = { git = "https://github.com/emilk/emigui", features = ["with_serde"] }
egui_glium = { git = "https://github.com/emilk/emigui" }
serde = { version = "1", features = ["derive"] }
