[package]
name = "demo_glium"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
egui = { path = "../egui", features = ["serde"] }
egui_glium = { path = "../egui_glium" }
serde = { version = "1", features = ["derive"] }
