[package]
name = "egui-wgpu"
version = "0.18.0"
description = "Bindings for using egui natively using the wgpu library"
authors = [
    "Nils Hasenbanck <nils@hasenbanck.de>",
    "embotech <opensource@embotech.com>",
    "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
]
edition = "2021"
rust-version = "1.60"
homepage = "https://github.com/emilk/egui/tree/master/egui-wgpu"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/egui-wgpu"
categories = ["gui", "game-development"]
keywords = ["wgpu", "egui", "gui", "gamedev"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]


[dependencies]
egui = { version = "0.18.1", path = "../egui", default-features = false, features = [
    "bytemuck",
] }

bytemuck = "1.7"
pollster = "0.2"
wgpu = "0.12"
winit = "0.26"
