[package]
name = "egui-winit"
version = "0.18.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
description = "Bindings for using egui with winit"
edition = "2021"
rust-version = "1.60"
homepage = "https://github.com/emilk/egui/tree/master/egui-winit"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/emilk/egui/tree/master/egui-winit"
categories = ["gui", "game-development"]
keywords = ["winit", "egui", "gui", "gamedev"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true


[features]
default = ["clipboard", "links"]

# implement bytemuck on most types.
bytemuck = ["egui/bytemuck"]

# enable cut/copy/paste to OS clipboard.
# if disabled a clipboard will be simulated so you can still copy/paste within the egui app.
clipboard = ["arboard"]

# enable opening links in a browser when an egui hyperlink is clicked.
links = ["webbrowser"]

# enable profiling with the puffin crate: https://github.com/EmbarkStudios/puffin
puffin = ["dep:puffin"]

# experimental support for a screen reader
screen_reader = ["tts"]

# to serialize `WindowSettings`
serde = ["egui/serde", "dep:serde"]


[dependencies]
egui = { version = "0.18.0", path = "../egui", default-features = false, features = [
  "tracing",
] }
instant = { version = "0.1", features = ["wasm-bindgen"] } # We use instant so we can (maybe) compile for web
tracing = "0.1"
winit = "0.26.1"

arboard = { version = "2.1", optional = true, default-features = false }
puffin = { version = "0.13", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
webbrowser = { version = "0.7", optional = true }

# feature screen_reader
tts = { version = "0.20", optional = true } # stuck on old version due to compilation problems on linux
