[package]
name = "egui_demo"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = { version = "0.6.0", path = "../egui", features = ["serde"] }
egui_demo_lib = { path = "../egui_demo_lib" }
epi = { version = "0.6.0", path = "../epi", features = ["serde", "serde_json"] }
serde = { version = "1", features = ["derive"] }

# For compiling natively:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui_glium = { path = "../egui_glium" }

# For compiling to web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
egui_web = { path = "../egui_web" }
js-sys = "0.3"
wasm-bindgen = "0.2"
